Load resource authors if present Do not render complete page when closing modal